event log 수정
