# pkg/api/rest/model/workflow.go
@@ -148,6 +148,17 @@ type TaskInstanceReference struct {
 type TaskLog struct {
 	Content string `json:"content,omitempty"`
 }
+
+type EventLog struct {
+	WorkflowRunID string `json:"workflow_run_id,omitempty"`
+	WorkflowID string `json:"workflow_id"`
+	TaskID string `json:"task_id"`
+	TaskName string `json:"task_name"`
+	Event string `json:"event,omitempty"`
+	When time.Time `json:"start_date,omitempty"`
+	Extra string `json:"extra,omitempty"`
+}
+
 func (d Data) Value() (driver.Value, error) {
 	return json.Marshal(d)
 }
